force-app/main/default/objects/Case_Closed__e/Case_Closed__e.object-meta.xml
<CustomObject>
    <label>Case Closed</label>
    <pluralLabel>Cases Closed</pluralLabel>
</CustomObject>