force-app/main/default/objects/Case_Closed__e/fields/Box_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Box_Item_ID__c</fullName>
    <label>Box Item ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>