force-app/main/default/objects/Case_Closed__e/fields/Box_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Box_Item_Type__c</fullName>
    <label>Box Item Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>