force-app/main/default/objects/Case_Closed__e/fields/Box_Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>Box_Parent_ID__c</fullName>
    <label>Box Parent ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>